home qismidagi text o'zgarib turishi qilindi

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section id="hero">
         <h2>
           Choose your own <br>
-          <strong>Method</strong> to achieve success
+          <strong id="changingText">Way</strong> to achieve success
         </h2>
         <button class="btn btn-outline-light">Learn More</button>
       </section>
