loading qo'shildi

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </head>
 
 <body>
-  <!-- nav offcanvas -->
-  <!-- <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-    aria-controls="offcanvasRight">Toggle right offcanvas</button> -->
+
+  <section class="loading-sect">
+    <span class="loader"></span>
+  </section>
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
